@@ -1,3 +1,8 @@
+2009-08-18  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclPathObj.c: Added NULL check to prevent crashes during
+	* tests/fileName.test:  [glob].  [Bug 2837800]
+
 2009-08-16  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/dltest/pkge.c:  const addition
